Scroll Event Needs to be implemented

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
         <div class="qb-info-card-cover">
             <div class="qb-info-card qb-card-translate qb-card-padding-top">
-                <div class="qb-info-card-head wow fadeInUp">
+                <div class="wow2 qb-info-card-head wow fadeInUp">
                     Hi There !
                     <br> I Am Ayush Agrawal.
                 </div>
