Profile pic Added

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="qb-pic-card qbCardShadow qbSlideInUp">
                 <div class="qb-card card">
                     <div class="qb-pic">
-                        <img src="" alt="" class="qb-img">
+                        <div style="width: 100%; height: 100%; background-image: url('images/profile.jpg');" class="qbImgCover qb-img" ></div>
                     </div>
                 </div>
             </div>
