--- a/index.html
+++ b/index.html
@@ -53,11 +53,36 @@
     </div>
 
     <div class="qb-wall">
-        <div class="qb-wall-bg qbImgCover" style="background-image: url('images/31225.jpg');">
-            <div class="qb-wall-cover">
-                <div class="qb-wall-content">
-                    <div class="qb-wall-text animated">
-                        Developer is an organism <br>that turns coffee into code
+        <div class="qb-wall-bg-cover" style="opacity: 1;">
+            <div class="qb-wall-bg qbImgCover" style="background-image: url('images/31225.jpg');">
+                <div class="qb-wall-cover">
+                    <div class="qb-wall-content">
+                        <div class="qb-wall-text animated">
+                            Developer is an organism <br>that turns coffee into code
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="qb-wall-bg-cover">  
+            <div class="qb-wall-bg qbImgCover" style="background-image: url('images/31230.jpg');">
+                <div class="qb-wall-cover">
+                    <div class="qb-wall-content">
+                        <div class="qb-wall-text animated">
+                            Make it work,<br> Make it right,<br> Make it Fast.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="qb-wall-bg-cover">
+            <div class="qb-wall-bg qbImgCover" style="background-image: url('images/31236.jpg');">
+                <div class="qb-wall-cover">
+                    <div class="qb-wall-content">
+                        <div class="qb-wall-text animated">
+                            First solve the Problem. <br>
+                            Then, write the Code.
+                        </div>
                     </div>
                 </div>
             </div>
@@ -217,7 +242,57 @@
         </div>
     </div>
     <div class="qb-footer" id="Contact">
-
+        <div class="qb-footer-head">
+            Contact Me
+        </div>
+        <div class="qb-footer-text">
+            Follow me in on
+        </div>
+        <div class="qb-footer-cards">
+            <div class="qb-footer-card">
+                <div class="qb-footer-icon">
+                    <i class="fab fa-facebook"></i>
+                </div>
+                <div class="qb-footer-name">
+                    facebook
+                </div>
+            </div>
+            <div class="qb-footer-card">
+                <div class="qb-footer-icon">
+                    <i class="fab fa-instagram"></i>
+                </div>
+                <div class="qb-footer-name">
+                    Instagram
+                </div>
+            </div>
+            <div class="qb-footer-card">
+                <div class="qb-footer-icon">
+                    <i class="fab fa-whatsapp"></i>
+                </div>
+                <div class="qb-footer-name">
+                    Whatsapp
+                </div>
+            </div>
+            <div class="qb-footer-card">
+                <div class="qb-footer-icon">
+                    <i class="fab fa-twitter"></i>
+                </div>
+                <div class="qb-footer-name">
+                    Twitter
+                </div>
+            </div>
+        </div>
+        <div class="qb-site">
+            <div class="qb-site-logo">
+                Zaran
+            </div>
+            <div class="qb-site-text">
+                Personalised Site For Your Own Resume
+            </div>
+        </div>
+        <div class="qb-credit">
+            Site Created And Maintained By Ayush Agrawal
+        </div>
     </div>
 </body>
 </html>
