--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
                 <div class="qb-navbar-collapse">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link qb-font-light" href="#">Home</a>
+                            <a class="nav-link qb-font-light" style="color: rgba(255, 255, 255,1);" href="#">Home</a>
                         </li>
                         <li class="nav-item iBlock">
-                            <a class="nav-link" href="#About">About</a>
+                            <a class="nav-link" style="color: rgb(251, 251, 251);" href="#About">About</a>
                         </li>
                         <li class="nav-item iBlock">
-                            <a class="nav-link" href="#Projects">Projects</a>
+                            <a class="nav-link" style="color: rgb(251, 251, 251);" href="#Projects">Projects</a>
                         </li>    
                         <li class="nav-item iBlock">
-                            <a class="nav-link" href="#Skills">Skills</a>
+                            <a class="nav-link" style="color: rgb(251, 251, 251);" href="#Skills">Skills</a>
                         </li>    
                         <li class="nav-item iBlock">
-                            <a class="nav-link" href="#Contact">Contact Me</a>
+                            <a class="nav-link" style="color: rgb(251, 251, 251);" href="#Contact">Contact Me</a>
                         </li>    
                     </ul>
                 </div>
