Image Cropper Link added

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             <div class="qb-project-card-icon">
                                 <i class="fas fa-crop"></i>
                             </div>
-                            <a href="https://ayushagrawal25.github.io/calculator" class="qbCardTitle" style="text-decoration: none;">Image Cropper</a>
+                            <a href="https://ayushagrawal25.github.io/ImageCropper" class="qbCardTitle" style="text-decoration: none;">Image Cropper</a>
                         </div>
                     </div>
                 </div>
