Ready to submit

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
                     <br> I Am Ayush Agrawal.
                 </div>
                 <div class="qb-info-card-text qb-info-card-text-padding qb-info-card-width-limit">
-                    I'm a Web Developer and a Competitve Coder.
+                    I'm a Full Stack Developer and a Competitve Coder.
                     <br> <br> I'm doing my undergraduation at the National Institute of Technology - Raipur, graduating with a B.Tech degree in Computer Science and Engineering, and I spent most of my time coding and learning about new Techs.
-                    <br> <br> People have coding as one of there hobies but for me coding is much more than hobby or passion. 
+                    <br> <br> People have coding as one of there hobies but for me coding is much more than passion or hobby. 
                     <br> For me it is the way I live my Life.
                     <br> <br> Debuging is the way how I solve my problems in reality.
                     <br>
@@ -127,9 +127,9 @@
                     <div class="qb-projects">
                         <div class="card qb-project-card wow fadeInUp qbCardShadow">
                             <div class="qb-project-card-icon">
-                                <i class="fas fa-dumbbell"></i>
+                                <img height="100%" width="100%" src="./images/tweenin.png">
                             </div>
-                            <a href="https://ayushagrawal25.github.io/Endurance" class="qbCardTitle" style="text-decoration: none;">Endurance</a>
+                            <a href="https://play.google.com/store/apps/details?id=com.tvast.tweenin" class="qbCardTitle" style="text-decoration: none;">Tweenin</a>
                         </div>
                         <div class="card qb-project-card wow fadeInUp qbCardShadow">
                             <div class="qb-project-card-icon">
@@ -165,6 +165,12 @@
                             Front-End
                         </div>
                         <div class="qb-skill-cards">
+                            <div class="qb-skill-card card wow fadeInUp qbCardShadow">
+                                <div class="qb-skill-card-icon">
+                                    <img height="75%" src="./images/flutter.png">
+                                </div>
+                                <div class="qb-skill-card-text qbCardTitle">Flutter</div>
+                            </div>
                             <div class="qb-skill-card card wow fadeInUp qbCardShadow">
                                 <div class="qb-skill-card-icon">
                                     <i class="far fa-file-code"></i>
@@ -214,9 +220,9 @@
                             </div>
                             <div class="qb-skill-card card wow fadeInUp qbCardShadow">
                                 <div class="qb-skill-card-icon">
-                                    <i class="fab fa-php"></i>
+                                    <img height="75%" src="./images/GO.png">
                                 </div>
-                                <div class="qb-skill-card-text qbCardTitle">PHP</div>
+                                <div class="qb-skill-card-text qbCardTitle">Go Lang</div>
                             </div>
                         </div>
                         <div class="qb-skill-head">
@@ -228,6 +234,18 @@
                                     C++
                                 </div>
                                 <div class="qb-skill-card-text qbCardTitle">C++/C</div>
+                            </div>
+                            <div class="qb-skill-card card wow fadeInUp qbCardShadow">
+                                <div class="qb-skill-card-icon">
+                                    <i class="fab fa-java"></i>
+                                </div>
+                                <div class="qb-skill-card-text qbCardTitle">Java</div>
+                            </div>
+                            <div class="qb-skill-card card wow fadeInUp qbCardShadow">
+                                <div class="qb-skill-card-icon">
+                                    <img height="100%" src="./images/dart.png">
+                                </div>
+                                <div class="qb-skill-card-text qbCardTitle">Dart</div>
                             </div>
                             <div class="qb-skill-card card wow fadeInUp qbCardShadow">
                                 <div class="qb-skill-card-icon">
